# variational-surface-cutting

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  build_output.txt  diagnose_mesh_quality.bat  imgui.ini  test_mesh_conversion.cpp  test_output.txt  test_remeshing_spot.bat  test_simple_mesh.cpp
core/: CMakeLists.txt  TECHNICAL_ARCHITECTURE_Core.md
core/include/: dense_matrix.ipp  halfedge_data_types.ipp  halfedge_mesh.ipp  sparse_matrix.h  unit_vector3.h  utilities.h  vector3.h  vector3.ipp
core/src/: direction_fields.cpp  halfedge_mesh.cpp  meshio.cpp
data/: imgui.ini
gui/src/: CMakeLists.txt  colormaps.cpp  scene_mesh.cpp
projects/: CMakeLists.txt
projects/cuts/: CMakeLists.txt
projects/cuts/core/: CMakeLists.txt
projects/cuts/core/include/: eulerian_shape_optimizer.h  fast_triangle_soup.h  relaxed_cut_optimizer.h
projects/cuts/core/src/: eulerian_shape_optimizer.cpp  fast_cholesky.cpp  fast_triangle_soup.cpp  local_feature_size.cpp  region_management.cpp  surface_patch.cpp
projects/cuts/gui/: CMakeLists.txt  README.md
projects/flatten/: CMakeLists.txt
projects/flatten/core/: CMakeLists.txt
projects/surface-texture-mapping/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  REAL_ALGORITHM_INTEGRATION.md  TECHNICAL_ARCHITECTURE.md  test_integration.cpp  test_real_algorithms.cpp
projects/surface-texture-mapping/core/: CMakeLists.txt
projects/surface-texture-mapping/core/include/: barycentric_mapper.h  bff_wrapper.h  boundary_extractor.h  eulerian_cut_integrator.h  eulerian_optimizer_wrapper.h  geometry_adapter.h  mesh_processing.h  mesh_processor.h  pattern_back_mapper.h  real_algorithm_integration.h  surface_filling.h  texture_mapping.h  uv_distortion_analyzer.h  variational_cutting.h
projects/surface-texture-mapping/core/src/: barycentric_mapper.cpp  bff_wrapper.cpp  boundary_extractor.cpp  clipper_offset_filling.cpp  eulerian_cut_integrator.cpp  eulerian_optimizer_wrapper.cpp  geometry_adapter.cpp  integrated_algorithms.cpp  mesh_converter.cpp  mesh_processing.cpp  mesh_processor.cpp  pattern_back_mapper.cpp  real_algorithm_integration.cpp  surface_filling.cpp  texture_mapping.cpp  uv_distortion_analyzer.cpp  uv_to_3d_mapper.cpp  variational_cutting.cpp
projects/surface-texture-mapping/docs/: ALL_TESTS_REPORT.md  BFF_IMPLEMENTATION_STATUS.md  BFF_IMPLEMENTATION_SUCCESS.md  CONFORMAL_ERROR_TEST_REPORT.md  GUI_BUILD_REPORT.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_RESULTS.md  INTEGRATION_TEST_SUMMARY.md  MESH_PARAMETER_ANALYSIS.md  MINI_UNFOLD3D_TECHNICAL_ROADMAP.md  REAL_SPACE_COMPLIANCE_REPORT.md  REAL_SPACE_ENGINEERING_GUIDE.md  REFACTORING_DOCUMENTATION.md  工程级实现方案.md
projects/surface-texture-mapping/examples/: CMakeLists.txt  example_basic.cpp  example_full_pipeline.cpp  integrated_example.cpp  test_spot.cpp  test_visualization.cpp
projects/surface-texture-mapping/gui/: CMakeLists.txt  CMakeLists_standalone.txt
projects/surface-texture-mapping/gui/build_standalone/: CMakeCache.txt
projects/surface-texture-mapping/gui/include/: cgal_integration.h  imgui_distortion_viewer.h  imgui_texture_mapping_gui.h  real_algorithms.h  simple_bff_wrapper.h  texture_mapping_gui.h
projects/surface-texture-mapping/gui/src/: cgal_mesh_processing.cpp  distortion_viewer_main.cpp  glfw_stubs.cpp  gui_main.cpp  imgui_distortion_viewer.cpp  imgui_gui_main.cpp  imgui_texture_mapping_gui.cpp  imgui_texture_mapping_gui_minimal.cpp  real_algorithms.cpp  texture_mapping_gui.cpp
projects/surface-texture-mapping/src/: main.cpp
projects/surface-texture-mapping/tests/: CMakeLists.txt  README.md  TEST_SUMMARY.md  generate_test_meshes.py  test_barycentric_mapper.cpp  test_bff.cpp  test_complete_pipeline.cpp  test_distortion_analyzer.cpp  test_e2e_cylinder.cpp  test_integration_core_modules.cpp  test_main.cpp  test_pattern_back_mapper.cpp  test_real_space.cpp  test_simple.cpp
